--- a/src/main/webapp/home_page.html
+++ b/src/main/webapp/home_page.html
@@ -17,7 +17,7 @@
         <a href="#popup1" onclick="joinRoom()" id="join-room-btn">JOIN Room</a>
         <div id="popup1" class="popup-container">
             <div class="popup-content">
-                <a href="#" onclick="terminateRoom()" class="close">&times;</a>
+                <a href="#" onclick="terminateRoom()" id="close-btn" class="close">&times;</a>
                 <h3 id="pop-h3"></h3>
                 <p id="pop-p"></p>
             </div>
