--- a/src/main/webapp/auth/home_page.html
+++ b/src/main/webapp/auth/home_page.html
@@ -18,10 +18,10 @@
         </label>
         <a href="#popup1" onclick="joinRoom()" id="join-room-btn">JOIN Room</a>
         <div id="popup1" class="popup-container">
-            <div class="popup-content">
-                <a href="#" onclick="terminateRoom()" id="close-btn" class="close">&times;</a>
+            <div class="popup-content" id="popup-content">
+                <a href="#" id="close-btn" class="close">&times;</a>
                 <h3 id="pop-h3"></h3>
-                <p id="pop-p"></p>
+                <!--<p id="pop-p"></p>-->
             </div>
         </div>
     </div>
