--- a/src/main/webapp/auth/home_page.html
+++ b/src/main/webapp/auth/home_page.html
@@ -21,7 +21,7 @@
             <div class="popup-content" id="popup-content">
                 <a href="#" id="close-btn" class="close">&times;</a>
                 <h3 id="pop-h3"></h3>
-                <!--<p id="pop-p"></p>-->
+<!--            <p id="pop-p">hello</p>-->
             </div>
         </div>
     </div>
