--- a/src/main/webapp/auth/app.html
+++ b/src/main/webapp/auth/app.html
@@ -79,90 +79,161 @@
         <div class="row">
             <div class="red-section black-border">
                 <div class="white">
-                    <div class="red"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="red"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="red"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="red"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="red" id="red-home1"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="red" id="red-home2"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="red" id="red-home3"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="red" id="red-home4"><i class="fa-solid fa-chess-pawn" style="color: red; text-shadow: 0 0 3px #000;"></i></div>
                 </div>
             </div>
             <div class="lane-section">
-                <div class="row"><div class="box"></div><div class="box"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box green"></div><div class="box green"></div></div>
-                <div class="row"><div class="box"></div><div class="box green"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box green"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box green"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box green"></div><div class="box"></div></div>
+                <div class="row">
+                    <div class="box"       id="box1">1</div>
+                    <div class="box"       id="box2">2</div>
+                    <div class="box"       id="box3">3</div></div>
+                <div class="row">
+                    <div class="box"       id="box52">52</div>
+                    <div class="box green" id="green-box5">5</div>
+                    <div class="box green" id="box4">4</div>
+                </div>
+                <div class="row">
+                    <div class="box"       id="box51">51</div>
+                    <div class="box green" id="green-box4">4</div>
+                    <div class="box"       id="box5">5</div>
+                </div>
+                <div class="row">
+                    <div class="box"       id="box50">50</div>
+                    <div class="box green" id="green-box3">3</div>
+                    <div class="box"       id="box6">6</div>
+                </div>
+                <div class="row">
+                    <div class="box"       id="box49">49</div>
+                    <div class="box green" id="green-box2">2</div>
+                    <div class="box"       id="box7">7</div>
+                </div>
+                <div class="row">
+                    <div class="box"       id="box48">48</div>
+                    <div class="box green" id="green-box1">1</div>
+                    <div class="box"       id="box8">8</div>
+                </div>
             </div>
             <div class="green-section black-border">
                 <div class="white">
-                    <div class="green"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="green"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="green"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="green"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="green" id="green-home1"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="green" id="green-home2"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="green" id="green-home3"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="green" id="green-home4"><i class="fa-solid fa-chess-pawn" style="color: green; text-shadow: 0 0 3px #000;"></i></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="lane-section">
                 <div class="row">
-                    <div class="box"></div><div class="box red"></div><div class="box"></div>
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
+                    <div class="box"        id="box42">42</div>
+                    <div class="box red"    id="box43">43</div>
+                    <div class="box"        id="box44">44</div>
+                    <div class="box"        id="box45">45</div>
+                    <div class="box"        id="box46">46</div>
+                    <div class="box"        id="box47">47</div>
                 </div>
                 <div class="row">
-                    <div class="box"></div><div class="box red"></div><div class="box red"></div>
-                    <div class="box red"></div><div class="box red"></div><div class="box red"></div>
+                    <div class="box"        id="box41">41</div>
+                    <div class="box red"    id="red-box5">5</div>
+                    <div class="box red"    id="red-box4">4</div>
+                    <div class="box red"    id="red-box3">3</div>
+                    <div class="box red"    id="red-box2">2</div>
+                    <div class="box red"    id="red-box1">1</div>
                 </div>
                 <div class="row">
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
+                    <div class="box"        id="box40">40</div>
+                    <div class="box"        id="box39">39</div>
+                    <div class="box"        id="box38">38</div>
+                    <div class="box"        id="box37">37</div>
+                    <div class="box"        id="box36">36</div>
+                    <div class="box"        id="box35">35</div>
                 </div>
             </div>
             <div class="winning-section"></div>
             <div class="lane-section">
                 <div class="row">
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
+                    <div class="box"        id="box9">9</div>
+                    <div class="box"        id="box10">10</div>
+                    <div class="box"        id="box11">11</div>
+                    <div class="box"        id="box12">12</div>
+                    <div class="box"        id="box13">13</div>
+                    <div class="box"        id="box14">14</div>
                 </div>
                 <div class="row">
-                    <div class="box yellow"></div><div class="box yellow"></div><div class="box yellow"></div>
-                    <div class="box yellow"></div><div class="box yellow"></div><div class="box"></div>
+                    <div class="box yellow" id="yellow-box1">1</div>
+                    <div class="box yellow" id="yellow-box2">2</div>
+                    <div class="box yellow" id="yellow-box3">3</div>
+                    <div class="box yellow" id="yellow-box4">4</div>
+                    <div class="box yellow" id="yellow-box5">5</div>
+                    <div class="box"        id="box15">15</div>
                 </div>
                 <div class="row">
-                    <div class="box"></div><div class="box"></div><div class="box"></div>
-                    <div class="box"></div><div class="box yellow"></div><div class="box"></div>
+                    <div class="box"        id="box21">21</div>
+                    <div class="box"        id="box20">20</div>
+                    <div class="box"        id="box19">19</div>
+                    <div class="box"        id="box18">18</div>
+                    <div class="box yellow" id="box17">17</div>
+                    <div class="box"        id="box16">16</div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="blue-section black-border">
                 <div class="white">
-                    <div class="blue"><i class="fa-solid fa-chess-pawn  " style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="blue"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="blue"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="blue"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="blue" id="blue-home1"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="blue" id="blue-home2"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="blue" id="blue-home3"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="blue" id="blue-home4"><i class="fa-solid fa-chess-pawn" style="color: blue; text-shadow: 0 0 3px #000;"></i></div>
                 </div>
             </div>
             <div class="lane-section">
-                <div class="row"><div class="box"></div><div class="box blue"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box blue"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box blue"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box blue"></div><div class="box"></div></div>
-                <div class="row"><div class="box blue"></div><div class="box blue"></div><div class="box"></div></div>
-                <div class="row"><div class="box"></div><div class="box"></div><div class="box"></div></div>
+                <div class="row">
+                    <div class="box"      id="box34">34</div>
+                    <div class="box blue" id="blue-box1">1</div>
+                    <div class="box"      id="box22">22</div>
+                </div>
+                <div class="row">
+                    <div class="box"      id="box33">33</div>
+                    <div class="box blue" id="blue-box2">2</div>
+                    <div class="box"      id="box23">23</div>
+                </div>
+                <div class="row">
+                    <div class="box"      id="box32">32</div>
+                    <div class="box blue" id="blue-box3">3</div>
+                    <div class="box"      id="box24">24</div>
+                </div>
+                <div class="row">
+                    <div class="box"      id="box31">31</div>
+                    <div class="box blue" id="blue-box4">4</div>
+                    <div class="box"      id="box25">25</div>
+                </div>
+                <div class="row">
+                    <div class="box blue" id="box30">30</div>
+                    <div class="box blue" id="blue-box5">5</div>
+                    <div class="box"      id="box26">26</div>
+                </div>
+                <div class="row">
+                    <div class="box"      id="box29">29</div>
+                    <div class="box"      id="box28">28</div>
+                    <div class="box"      id="box27">27</div>
+                </div>
             </div>
             <div class="yellow-section black-border">
                 <div class="white">
-                    <div class="yellow"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="yellow"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="yellow"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
-                    <div class="yellow"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="yellow" id="yellow-home1"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="yellow" id="yellow-home2"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="yellow" id="yellow-home3"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
+                    <div class="yellow" id="yellow-home4"><i class="fa-solid fa-chess-pawn" style="color: yellow; text-shadow: 0 0 3px #000;"></i></div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="log-out">
-    <button onclick="location.href='../LogOut.jsp'" type="submit"><i class="fa fa-sign-out fa-2x" aria-hidden="true"></i></button>
+    <div class="log-out">
+        <button onclick="location.href='../LogOut.jsp'" type="submit"><i class="fa fa-sign-out fa-2x" aria-hidden="true"></i></button>
+    </div>
 </div>
 </body>
 </html>
